# CAPS-API

./: README.md
Demos/AribToSRT/: CMakeLists.txt  README.md
Demos/AribToSRT/include/MediaGaps/: Compiler.h  Exception.h  ExceptionHandler.h  Exports.h  IErrorInfoProvider.h  IErrorListener.h  IList.h  ISharedPtr.h  NonCopyable.h  Time.h  Types.h  UInt8List.h
Demos/AribToSRT/include/MediaGaps/Captions/: ISubtitleListener.h  Subtitle.h  SubtitleListenerSharedPtr.h  SubtitleText.h  TimestampListener.h
Demos/AribToSRT/include/MediaGaps/IO/: BufferDataSource.h  FileAlignedSource.h  FileSource.h  IBoundedSource.h  ISource.h  SinkNameListener.h  SinkSharedPtr.h  SourceSharedPtr.h
Demos/AribToSRT/include/MediaGaps/Logging/: ConsoleLoggerWriter.h  FileLoggerWriter.h  Logger.h  LoggerWriter.h  RotatingFileLoggerWriter.h
Demos/AribToSRT/include/MediaGaps/Media/: Colorspaces.h  DataTrackDescriptor.h  IAction.h  IActionWithState.h  IBaseWriter.h  IMediaChunkSizeProvider.h  IMediaSample.h  IProgressIndicator.h  ISampleProvider.h  IStateListener.h  IStateProvider.h  IWriter.h  MediaSampleSharedPtr.h  PictureTrackDescriptor.h  SampleProviderSharedPtr.h  (+3 more)
Demos/AribToSRT/lib/: mg_AribEngine_r.lib  mg_BaseTypes_r.lib  mg_CaptionsInterface_r.lib  mg_Core_r.lib  mg_Engine_r.lib  mg_IO_r.lib  mg_Memory_r.lib  mg_SRTEngine_r.lib  mg_TransportStreamEngine_r.lib
Demos/AribToSRT/src/: AribToSRTProgramListenerProvider.cpp  AribToSRTProgramListenerProvider.h  CMakeLists.txt  CustomLoggerAdapter.cpp  CustomLoggerAdapter.h  ProgramListenerAdapter.cpp  ProgramListenerAdapter.h  main.cpp
(+32 files in other folders)
